--- a/src/app/secciones/foro/foro.component.css
+++ b/src/app/secciones/foro/foro.component.css
@@ -3,47 +3,92 @@
   --gris-claro: #b8b8b8;
   --sombra:  0 0 13px 0 rgba(185, 185, 185, .25);
 }
+
+
 * {
 
   box-sizing: border-box;
   margin : 0;
   padding: 0;
 }
+.btn-primary{
+  padding-left:20%;
+  padding-right:20%;
+  font-size: small;
 
+ 
+}
 body {
   background: #f8fafb ;
+  font-family: 'Poppins', sans-serif;
+
 }
 main {
   max-width: 1000px;
   width: 90%;
   margin:40px auto;
+  font-family: 'Poppins', sans-serif;
 }
-.titulo{
+.todo{
+  background-color: #fff;
+}
+.Titulo{
   color:#3a3a3a;
+  background-color: #fff;
   font-weight: 700;
   text-align :center;
-  margin:60px 0;
+  margin-bottom: 2%;
+  padding-top: 2%;
+}
+.boton_preguntar{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 2%;
+  padding-bottom: 0.5%;
+}
+.btn-azul{
+  background-color: #007bff;
+  color: white;
+  font-size: medium;
+  padding-left:2%;
+  padding-right:2%;
 }
 
+.boton_usuarios{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1%;
+  margin-bottom: 1%;
+  padding-bottom: 2%;
+}
 .btn-verde{
   background-color: #CCCF31;
+ color: #fff;
+  font-size: 100%;
+  padding-left:2%;
+  padding-right:2%;
+  
+  
 }
+  
 
-.btn-verde p{
-  color:white;
-}
 
 .categorias{
-  margin-left: 6%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   column-count: 5;
-  margin-right: 10%;
+  padding-bottom: 2%;
+
   gap: 20px;
 }
 
 .categoria{
   cursor:pointer;
   text-align:center;
-  padding:20px;
+  padding-right:50px;
   border-radius: 10px;
   background: #fff;
   font-weight: 700;
@@ -78,7 +123,9 @@ main {
 }
 
 .pagprin{
-  margin-bottom: 200px;
+  margin-bottom:2em;
+  margin-top: 0%;
+  font-family: 'Poppins', sans-serif;
 }
 
 /*-------Estilo Modales----------*/
@@ -171,6 +218,11 @@ color:white;
   transform: rotate(45deg);
 }
 
+.btn-usuarios{
+  margin-bottom:2rem ;
+  margin-left: 3.5rem;
+}
+
 /*---------------------------------------------reponsive---------------------------------------------------*/
 
 @media screen and (max-width:820px){
@@ -219,7 +271,8 @@ color:white;
   height: 50%;
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: center;
 }
 .footer_pregunta{
   display: flex;
@@ -289,4 +342,9 @@ color:white;
   margin: 2%;
 }
 
-
+.tab-content{
+  padding-top: 1%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
