--- a/src/app/upload-task/upload-task.component.html
+++ b/src/app/upload-task/upload-task.component.html
@@ -9,11 +9,11 @@
 
   {{ snap.bytesTransferred }} of {{ snap.totalBytes }}
 
-  <div *ngIf="downloadURL as url">
+  <!--<div *ngIf="downloadURL as url">
     <h3>Results!</h3>
     <video [src]="url" controls="controls" auntoplay="autoplay" width="600" height="400"></video><br>
     <a [href]="url" target="_blank" rel="noopener">Download Me!</a>
-  </div>
+  </div>-->
 
   <button (click)="task.pause()" [disabled]="!isActive(snap)">Pause</button>
   <button (click)="task.cancel()" [disabled]="!isActive(snap)">Cancel</button>
