--- a/src/app/uploader/uploader.component.html
+++ b/src/app/uploader/uploader.component.html
@@ -12,5 +12,28 @@
 <h3>Uploads</h3>
 
 <div *ngFor="let file of files">
-  <upload-task [file]="file"></upload-task>
+  <!--<upload-task [file]="file"></upload-task>-->
+  <button  (click)="startUpload(file)" type="button"  id="boton_agregar"class="btn-primary" >Subir Archivo</button>
+
+  <div *ngIf="percentage | async as pct">
+    <progress [value]="pct" max="100"></progress>
+    {{ pct | number }}%
+  </div>
+  
+  
+  <div *ngIf="snapshot | async as snap">
+  
+    {{ snap.bytesTransferred }} of {{ snap.totalBytes }}
+  
+    <!--<div *ngIf="downloadURL as url">
+      <h3>Results!</h3>
+      <video [src]="url" controls="controls" auntoplay="autoplay" width="600" height="400"></video><br>
+      <a [href]="url" target="_blank" rel="noopener">Download Me!</a>
+    </div>-->
+  
+    <button (click)="task.pause()" [disabled]="!isActive(snap)">Pause</button>
+    <button (click)="task.cancel()" [disabled]="!isActive(snap)">Cancel</button>
+    <button (click)="task.resume()" [disabled]="!(snap?.state === 'paused')">Resume</button>
+  </div>
+
 </div>
