--- a/src/app/secciones/foro/foro.component.html
+++ b/src/app/secciones/foro/foro.component.html
@@ -638,7 +638,7 @@
       </div>
       <br>
 
-      
+
     </div>
 
      <!--Seccion Foro EntornoVirtual-->
@@ -815,7 +815,7 @@
         </div>
       </div>
       <br>
-      
+
 
     </div>
 
@@ -992,14 +992,14 @@
         </div>
       </div>
       <br>
-      
+
 
     </div>
 
   </div>
 
   <div *ngIf="validar" class="container mb-5 btn-usuarios">
-    <div  class="row d-flex justify-content-start mb-5 mt-2">
+    <div  class="row d-flex justify-content-start mb-5 mt-2" id="Ver_Usuarios">
       <a class= "btn btn-verde col-2 mx-5 btn-redo" [routerLink]="['/usuarios']">
         <p>Ver Usuarios</p>
       </a>
